Add [resources] expansion and [test.suites], and migrate them from Gradle
Real Spring Boot builds on Gradle lean on two things jrs could not
express: `processResources { expand(...) }`, which writes the version
into `application.yml`, and an `integrationTest` or `e2e` task over a
source set of its own. `jrs migrate` either dropped them or produced a
manifest that built something else.

- `[resources]` (SPEC §7.3, `expand.rs`): the files `expand` names
  (`*`, `?`, `**` globs under `resource-dir`) have every `${name}`
  replaced as they are copied, from `project.name`, `project.version`
  and `[resources.properties]`. `\${` is a literal `${`, so Spring's
  own placeholders survive; an unknown name, an unclosed `${` or a
  non-UTF-8 file fails the build with the file and line. An expanded
  file is compared by content, not mtime, so a new version reaches it
  without touching it. No Groovy template syntax: jrs runs no build
  code.
- `[test.suites.<name>]` (SPEC §10.2) and `jrs test --suite <name>`: a
  second set of tests with its own sources, resources, `jvm-args`,
  `env`, `forks` and `retries`, compiled as unit `suite-<name>` into
  `target/suites/<name>/classes` against the main and default test
  classes on the test classpath, reporting into its own
  `test-reports`, so `--rerun-failed` works per suite. Plain
  `jrs test` never runs one. A suite has no dependencies of its own,
  which keeps the lockfile one graph; ROADMAP now lists per-suite
  dependencies as the open part.
- Gradle migration: `processResources` becomes `[resources]`, with
  `expand(project.properties)` narrowed to `version`, `name` and the
  literal `group` and `description`; a `Test` task over another source
  set becomes a suite named after the task; `dependsOn` on
  `build`/`jar`/`assemble`/`bootJar` becomes a `pre-compile` hook and
  on `bootRun` a `pre-run` one; `jacoco { toolVersion }` becomes
  `test.jacoco-version`; `options.compilerArgs` joins `java.javac-args`
  and `bootRun`/`JavaExe